log/build_2023-12-02_17-40-01/my_robot_controller/stderr.log
/home/elee02/.local/lib/python3.10/site-packages/setuptools/_distutils/cmd.py:66: SetuptoolsDeprecationWarning: setup.py install is deprecated.
!!

        ********************************************************************************
        Please avoid running ``setup.py`` directly.
        Instead, use pypa/build, pypa/installer or other
        standards-based tools.

        See https://blog.ganssle.io/articles/2021/10/setup-py-deprecated.html for details.
        ********************************************************************************

!!
  self.initialize_options()
  File "/home/elee02/ros2_ws/src/install/my_robot_controller/lib/python3.10/site-packages/my_robot_controller/pose_subscriber.py", line 11
    self.pose_subscriber = self.create_subscription(msg_type = Pose, topic="/turtle1/pose", self.pose_callback, 10);
                                                                                                                  ^
SyntaxError: positional argument follows keyword argument

